--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "PIMS",
+    "slug": "PIMS",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
