--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
   ],
   "exclude": [
     "node_modules",
-    "babel.config.js",
+    "babel.config.ts",
     "metro.config.js",
     "jest.config.js"
   ],
