--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
-    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.1.2",
