--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.1",
-    "expo": "~52.0.37",
-    "expo-asset": "^11.0.4",
+    "expo": "^52.0.41",
+    "expo-asset": "^11.0.5",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -41,6 +41,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
     "typescript": "^5.3.3"
   },
