--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "tsc": "tsc",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -14,7 +13,6 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/drawer": "^7.3.2",
-    "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.1",
@@ -40,11 +38,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^18.0.0",
+    "@react-navigation/native": "^7.1.3",
+    "@types/node": "^22.14.0",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "private": true
 }
