--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "PIMS",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/PIMS.png",
+    "icon": "./assets/pims_logo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/PIMS.png",
+      "image": "./assets/pims_logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,13 +17,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/PIMS.png",
+        "foregroundImage": "./assets/app_icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.pims_app.PIMS"
     },
     "web": {
-      "favicon": "./assets/PIMS.png"
+      "favicon": "./assets/app_icon.png"
     },
     "plugins": [
       "expo-asset"
