--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "expo-asset": "^11.0.5",
     "expo-dev-client": "~5.0.20",
     "expo-linear-gradient": "~14.0.2",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -43,7 +44,6 @@
     "@react-navigation/native": "^7.1.3",
     "@types/node": "^22.14.0",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
     "ts-node": "^10.9.2",
