--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.1",
     "dotenv": "^16.5.0",
     "expo": "^52.0.41",
+    "expo-application": "~6.0.2",
     "expo-asset": "^11.0.5",
     "expo-dev-client": "~5.0.20",
     "expo-linear-gradient": "~14.0.2",
@@ -36,8 +37,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-application": "~6.0.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
