--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "expo": "^52.0.41",
     "expo-application": "~6.0.2",
@@ -38,7 +39,9 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.8.0",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
