--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native-stack": "^7.3.3",
@@ -31,6 +32,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.13",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
@@ -41,7 +43,6 @@
     "react-native-screens": "~4.4.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.8.0",
-    "react-native-ui-datepicker": "^3.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
