--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.1",
+    "base-64": "^1.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "expo": "^52.0.41",
@@ -28,6 +29,7 @@
     "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
+    "js-base64": "^3.7.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
