--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-checkbox": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
