--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native-stack": "^7.3.3",
@@ -21,44 +21,44 @@
     "base-64": "^1.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "expo": "~52.0.47",
-    "expo-application": "~6.0.2",
-    "expo-asset": "^11.0.5",
-    "expo-dev-client": "~5.0.20",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-screen-orientation": "~8.0.4",
-    "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.18",
+    "expo-application": "~6.1.5",
+    "expo-asset": "~11.1.7",
+    "expo-checkbox": "~4.1.4",
+    "expo-dev-client": "~5.2.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-screen-orientation": "~8.1.7",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
     "js-base64": "^3.7.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.13",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-checkbox": "~4.0.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-navigation/native": "^7.1.3",
     "@types/node": "^22.14.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "expo": {
     "doctor": {
