--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
+    //"module": "esnext",
     "strict": true,
     "jsx": "react-native",
     "noEmit": true,
@@ -11,15 +12,19 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
+    //"moduleResolution": "bundler",
     "allowJs": true
   },
   "include": [
     "src/**/*",
-    "node_modules/@types/**/*"
-, "components/ESigning.tsx", "components/InboxList.tsx", "components/CashTransactionsScreen.tsx"  ],
+    "node_modules/@types/**/*",
+    "components/ESigning.tsx",
+    "components/InboxList.tsx",
+    "components/CashTransactionsScreen.tsx"
+  ],
   "exclude": [
     "node_modules",
-    "babel.config.ts",
+    "babel.config.js",
     "metro.config.js",
     "jest.config.js"
   ],
